--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha03'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha03'
     implementation 'androidx.fragment:fragment-ktx:1.2.4'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
