--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'realm-android'
+apply plugin: 'dagger.hilt.android.plugin'
+
 
 android {
     compileSdkVersion 29
@@ -50,7 +52,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha03'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha03'
-    implementation 'androidx.fragment:fragment-ktx:1.2.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha04'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 }
